/***********************************
It would be great to have a running
log of changes other than github 
commit messages. Please add the most 
recent ones on top, along with the 
date uploaded to the github
***********************************/

11/9-Robin
-made it so characters shake on all illegal moves

11/9 -Tim
-added pit shaking

11/8 -Tim
-added smooth movement

11/4 -Robin
-win message now properly clears
-Blue char is more transparent

11/3 -Robin
-Added win.js, a basic win condition script that is called through youWin() gameManager function 
-reset makeType to not have a default so that you have to be in edit mode to change tile types

10/29 - Teresa and Robin
-commented code finally…
-removed extraneous fields
-renamed levels
-made a file for crediting levels in the level folder

gameManager.js
-changed button sizes to be a little more dynamic
-levels now load in based on number


10/27 -Robin
changes:
-cleaned up character.js
-hardcoded in 3 demo levels

10/21 -Robin 
changes:
-Target collection now works fully!
-changed makeTarget to include both a target number, and the target we’re on as parameters
-make target now calls makeCollectable()if appropriate
-update seems like the most logical for handling proper target collection

character.js
-function move now just moves the character

gameManager.js
-new function pitcheck()
	-//returns true if both characters are not moving into pits
-new function sameSpaceCheck()	
	-//returns true if both characters are not moving into the same space
-new function targetBlockedCheck() 
	-//returns false if either character tries to move into a target they are not allowed to collect