@@ -1,11 +1,9 @@
-9
-9
-o o o o o o o o o
-o o _ x x x o o o
-o o _ _ _ _ _ 2 x
-o x _ A _ a _ x o
-o x _ b _ B _ x o
-o x _ C _ c _ x o
-x _ _ _ _ _ _ o o
-o o o x x x 1 o o
-o o o o o o x o o
+10
+7
+x x x x x x x x x x 
+x _ _ _ 1 x _ _ _ x
+x _ _ _ _ x _ _ _ x
+x _ _ _ A x _ 2 _ x
+x _ B _ _ x _ _ _ x
+x _ _ _ C x _ _ _ x
+x x x x x x x x x x 
