@@ -1,11 +1,9 @@
-8
-9
-x x x x x x x x 
-x _ _ _ _ _ _ x 
-x _ _ _ 1 _ C x 
-x B _ _ A _ _ x 
-x x x x x x x x 
-o x _ 2 o c x o 
-o x _ a o _ x o 
-o x _ _ b _ x o
-o x x x x x x o
+10
+7
+x x x x x x x x x x 
+x _ _ _ 1 x _ b o x
+x _ x x o x x _ _ x
+x _ x _ A x c a _ x
+x _ B _ _ x _ o _ x
+x _ _ _ C x _ 2 _ x
+x x x x x x x x x x 
