@@ -1,9 +1,11 @@
-12
-7
-o o o o o o o o o o o o
-o - - - 2 - - - - - - o
-o - B - - - - x b - - o
-o C x - - - - - - c - o
-o - A - - - a - - - - o
-o - - 1 - - - - - - - o
-o o o o o o o o o o o o
+8
+9
+x x x x x x x x 
+x _ _ _ _ _ _ x 
+x _ _ _ 1 _ C x 
+x B _ _ A _ _ x 
+x x x x x x x x 
+o x _ 2 o c x o 
+o x _ a o _ x o 
+o x _ _ b _ x o
+o x x x x x x o
