@@ -1,13 +1,11 @@
-13
-11
-o o o o o o o o o o o o o
-o o o o o o _ o o o o o o
-o o o o o _ _ _ o o o o o
-o o o o o A o b o o o o o
-o _ _ 1 x _ x _ x _ _ _ o
-o _ _ _ 2 _ _ _ _ _ _ _ o
-o o o o o B o a o o o o o
-o o o o o _ _ _ o o o o o
-o o o o o o C o o o o o o
-o o o o o o c o o o o o o
-o o o o o o o o o o o o o
+9
+9
+o o o o o o o o o
+o o _ x x x o o o
+o o _ _ _ _ _ 2 x
+o x _ A _ a _ x o
+o x _ b _ B _ x o
+o x _ C _ c _ x o
+x _ _ _ _ _ _ o o
+o o o x x x 1 o o
+o o o o o o x o o
