@@ -1,17 +1,8 @@
 ﻿<Properties>
-  <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="Assets/Resources/Scripts/gameManager.js">
-    <Files>
-      <File FileName="Assets/Resources/Scripts/tile.js" Line="1" Column="1" />
-      <File FileName="Assets/Resources/Scripts/gameManager.js" Line="1" Column="1" />
-      <File FileName="Assets/Resources/Scripts/tileModel.js" Line="1" Column="1" />
-      <File FileName="Assets/Resources/Scripts/character.js" Line="1" Column="1" />
-    </Files>
-  </MonoDevelop.Ide.Workbench>
+  <MonoDevelop.Ide.Workspace />
+  <MonoDevelop.Ide.Workbench />
   <MonoDevelop.Ide.DebuggingService.Breakpoints>
-    <BreakpointStore>
-      <Breakpoint file="/Users/robinwong/CS361/Assets/Resources/Scripts/gameManager.js" line="60" />
-    </BreakpointStore>
+    <BreakpointStore />
   </MonoDevelop.Ide.DebuggingService.Breakpoints>
   <MonoDevelop.Ide.DebuggingService.PinnedWatches />
 </Properties>
